--- a/src/SimpleTabControlSample/SimpleTabControlSample/SimpleTabControlSample.Shared/App.xaml
+++ b/src/SimpleTabControlSample/SimpleTabControlSample/SimpleTabControlSample.Shared/App.xaml
@@ -2,6 +2,6 @@
     x:Class="SimpleTabControlSample.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SimpleTabControlSample">
+    xmlns:local="using:SimpleTabControlSample" RequestedTheme="Dark">
 
 </Application>
